--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,5 +1,5 @@
 <div class="signup-form" >
-  <form action="/login" method="POST" class="submit-signup">
+  <form action="/signup" method="POST" class="submit-signup">
     First Name: <input type="text" name="user[first_name]"><br>
     Last Name: <input type="text" name="user[last_name]"><br>
     Username: <input type="text" name="user[username]"><br>
