--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,34 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
+
   <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+  <script src="/js/application.js"></script>
+  <script src="/js/mousetrap.js"></script>
+
   <link rel="stylesheet" href="/css/application.css">
   <!-- Load Vollkorn font -->
   <link href='http://fonts.googleapis.com/css?family=Vollkorn:400italic,400' rel='stylesheet' type='text/css'>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
-
   <title></title>
 </head>
 <body>
 <div id="content">
   <header>
-    <a href="/"><img src="/img/zenchinese.png" class="logo"></a>
+    <a href="/"><img src="img/ratatouille_cheese_nb.gif" class="logo"></a>
     <div id="login-toolbar">
       <% if current_user %>
-        <a href="/logout">Logout</a>
+        Hello <%= current_user.username %> || <a href="/logout">Logout</a> || <a href="/home">Home</a>
       <% else %>
-        <a href="/login">Login</a>
+        <a href="/login" class="login-link">Login</a> | <a href="/signup" class="signup-link">Sign up</a>
       <% end %>
+      <em><%=display_error%></em>
   </header>
   <%= yield %>
 </div>
