--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,7 @@
+Hello <%= current_user.username %>!<br>
+
 Welcome to Ratatouille!
 
-<em>Make beautiful recipes out of kitchen scraps</em>
+<em>Make beautiful recipes out of kitchen scraps</em><br>
 
-<!-- <img src="img/button_soup.jpg"> -->
 <img src="img/spices.jpeg">
