--- a/app/views/recipe/all.erb
+++ b/app/views/recipe/all.erb
@@ -6,6 +6,7 @@
       <th>Category</th>
       <th>Created By</th>
       <th>Submitted on</th>
+      <th></th>
     </tr>
        <%recipes.each do |recipe|%>
        <tr>
@@ -22,6 +23,14 @@
         </td>
         <td> <a href="/creator/<%=recipe.creator.id%>/recipes"><%=recipe.creator.username%></a></td>
         <td><%=recipe.created_at%></td>
+        <%if recipe.creator == current_user%>
+          <td>
+            <form action="/recipe/<%=recipe.id%>" method="POST" class="delete_recipe">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="X">
+          </form>
+          </td>
+        <%end%>
        </tr>
     <%end%>
   </table>
