added first ajax call! for login form to appear

--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,7 +1,6 @@
-<div class="login-form" >
-  <form action="/login" method="POST" class="submit-login">
+
+  <form action="/login" method="POST" class="login_form">
     Email: <input type="text" name="user[email]"><br>
     Password: <input type="password" name="user[password]"><br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit"><br><br>
   </form>
-</div>
