--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,6 @@
+
 <%if current_user%>
-Hello <%= current_user.username %>!<br>
+  <div class="greeting">Hello <%= current_user.username %>!</div>
 <%end%>
 
 Welcome to Ratatouille!
