--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -9,5 +9,5 @@
     Password: <input type="password" name="user[password]"><br>
     Confirm Password: <input type="password" name="user[password_confirmation]"><br>
     <input type="submit" value="Submit">
-  </form>
+  </form><br><br>
 </div>
