made signup for prettier - appears below welcome div now

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,10 @@
   <div class="greeting">Hello <%= current_user.username %>!</div>
 <%end%>
 
-Welcome to Ratatouille!
+<div class="welcome">
+  Welcome to Ratatouille!
 
-<em>Make beautiful recipes out of kitchen scraps</em><br>
+  <em>Make beautiful recipes out of kitchen scraps</em><br>
 
 <img src="img/spices.jpeg">
+</div>
