fix a tags to have absolute path with slash

--- a/app/views/auth/profile.erb
+++ b/app/views/auth/profile.erb
@@ -1,4 +1,4 @@
-<div class="signup-form" >
+<div class="profile" >
   <form action="/login" method="POST" class="submit-signup">
     First Name: <input type="text" name="user[first_name]"><br>
     Last Name: <input type="text" name="user[last_name]"><br>
@@ -9,5 +9,7 @@
     Password: <input type="password" name="user[password]"><br>
     Confirm Password: <input type="password" name="user[password_confirmation]"><br>
     <input type="submit" value="Submit">
-  </form>
+  </form><br><br>
+
+  <a href="/profile/edit">Edit Profile</a>
 </div>
